force-app/main/default/objects/Loan_Document__c/Loan_Document__c.object-meta.xml
<CustomObject>
    <description>Operational lifecycle tracking for loan-related documents.</description>
    <label>Loan Document</label>
    <nameField>
        <displayFormat>LD-{00000}</displayFormat>
        <label>Loan Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>