force-app/main/default/objects/Loan_Document__c/fields/Alert_Level__c.field-meta.xml
<CustomField>
    <fullName>Alert_Level__c</fullName>
    <label>Alert Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>