force-app/main/default/objects/Loan_Document__c/fields/Authenticity_Checked_On__c.field-meta.xml
<CustomField>
    <fullName>Authenticity_Checked_On__c</fullName>
    <label>Authenticity Checked On</label>
    <type>DateTime</type>
</CustomField>