force-app/main/default/objects/Loan_Document__c/fields/Authenticity_Reference__c.field-meta.xml
<CustomField>
    <fullName>Authenticity_Reference__c</fullName>
    <label>Authenticity Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>