force-app/main/default/objects/Loan_Document__c/fields/Authenticity_Score__c.field-meta.xml
<CustomField>
    <fullName>Authenticity_Score__c</fullName>
    <label>Authenticity Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>