force-app/main/default/objects/Loan_Document__c/fields/Authenticity_Status__c.field-meta.xml
<CustomField>
    <fullName>Authenticity_Status__c</fullName>
    <label>Authenticity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Needs_Review</fullName>
                <label>Needs Review</label>
            </value>
            <value>
                <fullName>Suspected_Fraud</fullName>
                <label>Suspected Fraud</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>