force-app/main/default/objects/Loan_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed Loan Agreement</fullName>
                <default>true</default>
                <label>Signed Loan Agreement</label>
            </value>
            <value>
                <fullName>Proof of Income</fullName>
            </value>
            <value>
                <fullName>Government ID</fullName>
            </value>
            <value>
                <fullName>Proof of Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>