force-app/main/default/objects/Loan_Document__c/fields/Next_Alert_On__c.field-meta.xml
<CustomField>
    <fullName>Next_Alert_On__c</fullName>
    <label>Next Alert On</label>
    <type>DateTime</type>
</CustomField>