force-app/main/default/objects/Loan_Document__c/fields/Ops_Comments__c.field-meta.xml
<CustomField>
    <fullName>Ops_Comments__c</fullName>
    <label>Ops Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>