force-app/main/default/objects/Loan_Document__c/fields/Reviewed_On__c.field-meta.xml
<CustomField>
    <fullName>Reviewed_On__c</fullName>
    <label>Reviewed On</label>
    <type>DateTime</type>
</CustomField>