force-app/main/default/objects/Loan_Document__c/fields/Scan_Reference__c.field-meta.xml
<CustomField>
    <fullName>Scan_Reference__c</fullName>
    <label>Scan Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>