force-app/main/default/objects/Loan_Document__c/fields/Scan_Status__c.field-meta.xml
<CustomField>
    <fullName>Scan_Status__c</fullName>
    <label>Scan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Infected</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>