force-app/main/default/objects/Loan_Document__c/fields/Scanned_On__c.field-meta.xml
<CustomField>
    <fullName>Scanned_On__c</fullName>
    <label>Scanned On</label>
    <type>DateTime</type>
</CustomField>