force-app/main/default/objects/Loan_Document__c/fields/SLA_State__c.field-meta.xml
<CustomField>
    <fullName>SLA_State__c</fullName>
    <label>SLA State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not_Due</fullName>
                <default>true</default>
                <label>Not Due</label>
            </value>
            <value>
                <fullName>Due_Soon</fullName>
                <label>Due Soon</label>
            </value>
            <value>
                <fullName>Overdue</fullName>
            </value>
            <value>
                <fullName>Escalated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>