force-app/main/default/objects/Loan_Document__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Due_On__c</columns>
    <columns>SLA_State__c</columns>
    <columns>Uploaded_On__c</columns>
    <columns>Is_Latest__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>