force-app/main/default/objects/Loan_Document__c/listViews/Overdue_Clarifications.listView-meta.xml
<ListView>
    <fullName>Overdue_Clarifications</fullName>
    <columns>NAME</columns>
    <columns>Loan__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Due_On__c</columns>
    <columns>SLA_State__c</columns>
    <columns>Uploaded_On__c</columns>
    <columns>Uploaded_By__c</columns>
    <columns>Ops_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Needs_Clarification</value>
    </filters>
    <filters>
        <field>Due_On__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Overdue Clarifications</label>
</ListView>